# servant-multi-auth

./: README.md  servant-multi-auth.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.2/: package.cache  servant-multi-auth-0.1.0.0-inplace.conf
dist-newstyle/tmp/environment.-56624/: .ghc.environment.x86_64-darwin-9.2.2
src/: App.hs
